--- a/CSS/experience.css
+++ b/CSS/experience.css
@@ -3,6 +3,7 @@
     display: flex;
     flex-direction: column;
     gap: 3rem;
+    height: 100vh;
 }
 
 .experience .content {
@@ -29,4 +30,16 @@
     display: flex;
     flex-direction: column;
     gap: 1rem;
+}
+
+@media screen and (max-width: 500px) {
+    .experience .content {
+        display: flex;
+        flex-direction: column;
+        height: auto;
+    }
+
+    .experience .jop-title {
+        border: solid 0.1rem #000;
+    }
 }
