--- a/CSS/projects.css
+++ b/CSS/projects.css
@@ -45,3 +45,10 @@
     width: 1rem;
     height: 1rem;
 }
+@media screen and (max-width: 500px) {  
+    .projects {
+        grid-template-columns: repeat(1, 1fr);
+        padding: 0 ;
+    }
+    
+}
