--- a/CSS/bodyAbout.css
+++ b/CSS/bodyAbout.css
@@ -10,6 +10,11 @@
     margin: 5rem 0;
 }
 
+.body-about {
+    display: flex;
+    align-items: center;
+}
+
 .body-about .text-container {
     width: 34.5rem;
     height: auto;
@@ -47,5 +52,22 @@
 
     .abut-me .contaner {
         gap: 0.5rem;
+    }
+}
+
+@media screen and (max-width: 900px) {
+    .body-about .text-container {
+        width: auto;
+    }
+
+
+
+    .body-about .my-picture {
+        width: 100rem;
+
+    }
+
+    figcaption {
+        display: none;
     }
 }
