--- a/CSS/footer.css
+++ b/CSS/footer.css
@@ -1,7 +1,7 @@
 footer {
     background-color: antiquewhite;
     display: flex;
-    justify-content:space-around;
+    justify-content: space-around;
     align-items: center;
 }
 
@@ -10,16 +10,31 @@ footer .icons img {
     width: 2rem;
     border-radius: 10%;
 }
+
 @media screen and (max-width: 500px) {
     footer {
-        justify-content:center;
-        gap:2rem
+        justify-content: center;
+        gap: 2rem
     }
-    footer h1{
+
+    footer h1 {
         font-size: 10px;
     }
+
     footer .icons img {
         height: 1rem;
         width: 1rem;
+    }
+}
+
+@media screen and (max-width: 900px) {
+
+    footer h1 {
+        font-size: 20px;
+    }
+
+    footer .icons img {
+        height: 1.5rem;
+        width: 1.5rem;
     }
 }
