--- a/CSS/projects.css
+++ b/CSS/projects.css
@@ -45,10 +45,18 @@
     width: 1rem;
     height: 1rem;
 }
-@media screen and (max-width: 500px) {  
+
+@media screen and (max-width: 500px) {
     .projects {
         grid-template-columns: repeat(1, 1fr);
-        padding: 0 ;
+        padding: 0;
     }
-    
+
+}
+
+@media screen and (max-width: 900px) {
+    .projects {
+        padding: 0 2rem;
+    }
+
 }
