--- a/CSS/style.css
+++ b/CSS/style.css
@@ -5,6 +5,7 @@
 @import "./footer.css";
 @import "./header.css";
 @import "./projects.css";
+@import "./dashpord.css";
 
 * {
     border: 0;
@@ -14,6 +15,7 @@
     font-family: "Merriweather", serif;
     font-weight: 300;
     font-style: normal;
+    position: relative;
 }
 
 body {
@@ -21,7 +23,7 @@ body {
 
 }
 
-nav ul {
+ul {
     list-style: none;
 }
 
@@ -60,6 +62,11 @@ h2::before {
 h2::after {
     right: 1rem;
 }
+
+.hidden {
+    display: none;
+}
+
 
 @media screen and (max-width: 500px) {
     * {
